# learning-gpu

./: .gitignore  1  README.md  cheatsheet.md  pyproject.toml
src/01_foundation/: 03_shapes.py  04_operations.py  05_first_nn.py  06_training.py
src/02_intermediate/: 01_save_load.py
src/03_advanced/: 02_model_optimization.py  03_inference_pipeline.py  04_gpu_vs_cpu_benchmark.py
src/04_llm/: 01_embeddings.py  02_attention.py  03_transformer_block.py
src/05_rag/: 01_vector_basics.py  02_embeddings_search.py  03_chromadb.py  04_document_loader.py  05_rag_pipeline.py  README.md
src/06_agents/: 01_agent_tools.py  02_agent_loop.py  03_agent_memory.py  04_agent_rag.py  05_agent_multi_tool.py  README.md
src/07_mcp/: 01_mcp_basics.py  02_mcp_tools.py  03_mcp_rag.py  04_mcp_agent.py  README.md  mcp_client.py  server.py
src/advanced/: 01_transfer_learning.py
src/foundation/: 01_verify_gpu.py  02_tensors.py  07_activations.py  08_classifier.py  09_mnist.py
src/llm/: 04_mini_gpt.py  06_pretrained_llm.py  07_finetune_lora.py  08_serve_ollama.py
